--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: kozistr@gmail.com
   facebook: #
   flickr: #
-  github: https://github.com/kozistr/
+  github: kozistr
   instagram: #
   linkedin: #
   pinterest: #
