--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-subtitle: Your awesome subtitle
+title: zer0day
+subtitle: Hacker & Developer
 description: >- # this means to ignore newlines until "baseurl:"
   Interested in Security/Hacking, Machine Learning, Data Science
 author: zer0day
