--- a/_config.yml
+++ b/_config.yml
@@ -56,5 +56,5 @@ twitter_url:
 google_analytics:
 
 # The following settings are NECESSARY for the Prologue theme to run:
-theme: jekyll-theme-prologue
+remote_theme: jekyll-theme-prologue
 collections: [sections]
