--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,10 @@ slack_url:
 twitter_url:
 
 # Google Analytics Tracking ID goes here:
-google_analytics:
+# google_analytics:
+
+# Disqus comments
+# disqus_shortname: zer0days-blog
 
 # The following settings are NECESSARY for the Prologue theme to run:
 remote_theme: jekyll-theme-prologue
