--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: zer0day
-subtitle: Hacker & Developer
+subtitle: Sec Researcher & ML Dev
 description: >- # this means to ignore newlines until "baseurl:"
   Interested in Security/Hacking, Machine Learning, Data Science
 author: zer0day
