--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ facebook_url:
 github_url: https://kozistr.github.io
 googleplus_url:
 instagram_url:
-linkedin_url:
+linkedin_url: https://www.slideshare.net/KimHyeongChan
 pinterest_url:
 slack_url:
 twitter_url:
