--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ avatar: assets/images/avatar.jpg
 
 # You'll want to customize url and baseurl for your own site:
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
+url: "kozistr.tech" # the base hostname & protocol for your site
 
 # Social settings
 facebook_url:
