update: new blog theme test

--- a/_config.yml
+++ b/_config.yml
@@ -75,6 +75,9 @@ pagination_dir: page
 ## Themes: https://hexo.io/themes/
 theme: clean-blog
 
+plugins:
+- hexo-generator-cname
+
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
