--- a/_config.yml
+++ b/_config.yml
@@ -10,16 +10,16 @@ exclude:
 
 # Site settings
 title: kozistr
-subtitle: "A simple yet classy theme for your Jekyll website or blog"
+subtitle: "Professional M.L Developer :)"
 email: kozistr@gmail.com
 name: HyeongChan Kim
 description: >
-  A simple yet classy theme for your Jekyll website or blog.
+  Interested in Machine Learning, Data Science!
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
 baseurl: "/" # the sub-path of your site, e.g. /blog/
-url: "http://bencentra.github.io" # the base hostname & protocol for your site
+url: "http://kozistr.tech" # the base hostname & protocol for your site
 cover: "/assets/header_image.jpg"
 logo: "/assets/logo.png"
 
@@ -41,10 +41,10 @@ jekyll-archives:
     tag: '/tag/:name/'
 
 # Disqus comments
-# disqus_shortname: bencentra
+disqus_shortname: zer0days-blog
 
 # Google analytics
-# ga_tracking_id: "UA-XXXX-1"
+ga_tracking_id: "UA-116366668-1"
 
 # Category descriptions (for archive pages)
 descriptions:
@@ -72,8 +72,8 @@ descriptions:
 social:
   - name: Twitter
     icon: twitter
-    username: TheBenCentra
-    url: https://twitter.com/TheBenCentra
+    username:
+    url:
     desc: Follow me on Twitter
     share: true
 
@@ -86,15 +86,15 @@ social:
 
   - name: GitHub
     icon: github
-    username: bencentra
-    url: https://github.com/bencentra
+    username: kozistr
+    url: http://kozistr
     desc: Fork me on GitHub
     share: false
 
   - name: LinkedIn
     icon: linkedin
-    username: Ben Centra
-    url: https://www.linkedin.com/pub/ben-centra/47/769/60a
+    username: kozistr
+    url: https://www.slideshare.net/KimHyeongChan
     desc: Connect with me on LinkedIn
     share: true
 
