--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,12 @@ descriptions:
   - cat: dummy
     desc: "Just some placeholder posts, lorem ipsum and the rest."
 
+  - cat: security
+    desc: "About my security researches"
+
+  - cat: ml
+    desc: "machine learning stuffs"
+
 # Social icons and sharing options
 #
 # Social settings are used in two places:
