--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ social:
   - name: LinkedIn
     icon: linkedin
     username: kozistr
-    url: https://www.slideshare.net/KimHyeongChan
+    url: https://www.linkedin.com/in/kozistr
     desc: Connect with me on LinkedIn
     share: true
 
