--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ subtitle: "wanna be Professional M.L Developer :)"
 email: kozistr@gmail.com
 name: HyeongChan Kim
 description: >
-  Interested in Machine Learning, Data Science!
+  Building awesome products & technologies to change the world!
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
