--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ exclude:
 
 # Site settings
 title: kozistr
-subtitle: "wanna be Professional M.L Developer :)"
+subtitle: "Building awesome products & technologies to change the world!"
 email: kozistr@gmail.com
 name: HyeongChan Kim
 description: >
