--- a/package.json
+++ b/package.json
@@ -56,9 +56,10 @@
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^3.3.30",
     "gatsby-remark-katex": "^3.3.12",
+    "gatsby-remark-mathjax": "^1.0.0",
     "gatsby-remark-prismjs": "^3.5.13",
     "gatsby-source-filesystem": "^2.3.30",
-    "gatsby-transformer-remark": "^2.8.35",
+    "gatsby-transformer-remark": "^2.12.0",
     "gatsby-transformer-sharp": "^2.5.15",
     "katex": "^0.10.2",
     "lodash": "^4.17.19",
