--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/junhobaik/junhobaik.github.io"
+    "url": "https://github.com/kozistr/kozistr.github.io"
   },
   "bugs": {
-    "url": "https://github.com/junhobaik/junhobaik.github.io/issues"
+    "url": "https://github.com/kozistr/kozistr.github.io/issues"
   },
   "scripts": {
     "start": "gatsby develop",
