--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "gatsby-plugin-robots-txt": "^1.6.10",
     "gatsby-plugin-sass": "^4.13.0",
     "gatsby-plugin-sharp": "^3.13.0",
-    "gatsby-plugin-sitemap": "^4.9.0",
+    "gatsby-plugin-sitemap": "^3.3.0",
     "gatsby-plugin-theme-ui": "^0.11.1",
     "gatsby-plugin-typescript": "^3.13.0",
     "gatsby-plugin-typography": "^3.13.0",
@@ -93,10 +93,13 @@
     "@types/typography": "^0.16.4",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
+    "autoprefixer": "^10.3.4",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.25.1",
     "gh-pages": "^3.2.3",
+    "postcss": "^8.3.6",
     "prettier": "^2.3.2",
+    "tailwindcss": "^2.2.9",
     "typescript": "^4.4.2"
   }
 }
