--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
+  "useTabs": false,
+  "tabWidth": 2,
   "endOfLine": "lf",
   "semi": true,
   "singleQuote": true,
-  "tabWidth": 2,
   "trailingComma": "es5",
   "printWidth": 120
 }
