refactor: secret key name to GH_TOKEN

--- a/.github/gh-pages.yml
+++ b/.github/gh-pages.yml
@@ -31,6 +31,6 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GH_TOKEN }}
           publish_branch: master
           publish_dir: ./public
