--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,7 @@
   "endOfLine": "lf",
   "semi": true,
   "singleQuote": true,
-  "trailingComma": "es5",
-  "printWidth": 120
+  "trailingComma": "all",
+  "printWidth": 120,
+  "arrowParens": "avoid"
 }
