--- a/.prettierrc
+++ b/.prettierrc
@@ -2,9 +2,9 @@
   "useTabs": false,
   "tabWidth": 2,
   "endOfLine": "lf",
-  "semi": true,
+  "semi": false,
   "singleQuote": true,
-  "trailingComma": "all",
+  "trailingComma": "es5",
   "printWidth": 120,
   "arrowParens": "avoid"
 }
