--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "cross-env GATSBY_CPU_COUNT=4 GATSBY_EXPERIMENTAL_QUERY_CONCURRENCY=8 GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "cross-env GATSBY_CPU_COUNT=8 GATSBY_EXPERIMENTAL_QUERY_CONCURRENCY=16 GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages && ",
+    "deploy": "cross-env GATSBY_CPU_COUNT=8 GATSBY_EXPERIMENTAL_QUERY_CONCURRENCY=16 GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages && gh-pages -d public",
     "format": "prettier --write \"**/*.{js,jsx,json,scss,tsx,ts}\"",
     "lint": "eslint --ext .js,.jsx --ignore-pattern public ."
   },
