--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
           restore-keys: ${{ runner.os }}-node-
 
       - name: Install Dependencies
-        run: npm ci --prefer-offline --no-audit --production
+        run: npm install --prefer-offline --no-audit
 
       - name: Lint
         run: npm run lint
