build(deps): upgrade packages

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "clean": "gatsby clean",
     "deploy": "npm run build && gh-pages -b master -d public",
     "format": "prettier --write \"**/*.{js,jsx,json,scss,tsx,ts}\"",
-    "lint": "eslint --ext .js,.jsx --ignore-pattern public ."
+    "lint": "eslint --ext .js,.jsx --ignore-pattern public .",
+    "update": "npm-check-updates -u"
   },
   "engines": {
     "node": "^16.0.0"
@@ -36,39 +37,39 @@
     "@types/theme-ui": "^0.6.0",
     "cross-env": "^7.0.3",
     "disqus-react": "^1.1.2",
-    "gatsby": "^4.11.2",
+    "gatsby": "^4.12.1",
     "gatsby-image": "^3.11.0",
-    "gatsby-plugin-feed": "^4.11.1",
-    "gatsby-plugin-google-analytics": "^4.11.0",
-    "gatsby-plugin-manifest": "^4.11.1",
-    "gatsby-plugin-offline": "^5.11.1",
-    "gatsby-plugin-preact": "^6.11.0",
-    "gatsby-plugin-react-helmet": "^5.11.0",
-    "gatsby-plugin-robots-txt": "^1.7.0",
-    "gatsby-plugin-sass": "^5.11.1",
-    "gatsby-plugin-sharp": "^4.11.1",
-    "gatsby-plugin-sitemap": "^5.11.1",
+    "gatsby-plugin-feed": "^4.12.1",
+    "gatsby-plugin-google-analytics": "^4.12.1",
+    "gatsby-plugin-manifest": "^4.12.1",
+    "gatsby-plugin-offline": "^5.12.1",
+    "gatsby-plugin-preact": "^6.12.1",
+    "gatsby-plugin-react-helmet": "^5.12.1",
+    "gatsby-plugin-robots-txt": "^1.7.1",
+    "gatsby-plugin-sass": "^5.12.1",
+    "gatsby-plugin-sharp": "^4.12.1",
+    "gatsby-plugin-sitemap": "^5.12.1",
     "gatsby-plugin-theme-ui": "^0.14.2",
-    "gatsby-plugin-typescript": "^4.11.1",
-    "gatsby-plugin-typography": "^4.11.0",
-    "gatsby-remark-autolink-headers": "^5.11.1",
-    "gatsby-remark-copy-linked-files": "^5.11.0",
+    "gatsby-plugin-typescript": "^4.12.1",
+    "gatsby-plugin-typography": "^4.12.1",
+    "gatsby-remark-autolink-headers": "^5.12.1",
+    "gatsby-remark-copy-linked-files": "^5.12.1",
     "gatsby-remark-emojis": "^0.4.3",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^6.11.1",
-    "gatsby-remark-katex": "^6.11.0",
+    "gatsby-remark-images": "^6.12.1",
+    "gatsby-remark-katex": "^6.12.1",
     "gatsby-remark-mathjax": "^1.0.0",
-    "gatsby-remark-prismjs": "^6.11.0",
-    "gatsby-source-filesystem": "^4.11.1",
-    "gatsby-transformer-remark": "^5.11.1",
-    "gatsby-transformer-sharp": "^4.11.0",
+    "gatsby-remark-prismjs": "^6.12.1",
+    "gatsby-source-filesystem": "^4.12.1",
+    "gatsby-transformer-remark": "^5.12.1",
+    "gatsby-transformer-sharp": "^4.12.1",
     "katex": "^0.13.24",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
     "moment": "^2.29.2",
     "node-sass": "^7.0.1",
     "preact": "^10.7.1",
-    "preact-render-to-string": "^5.1.20",
+    "preact-render-to-string": "^5.1.21",
     "prism-themes": "^1.9.0",
     "prismjs": "^1.27.0",
     "prop-types": "^15.8.1",
@@ -85,21 +86,21 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.181",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.1",
     "@types/react-helmet": "^6.1.5",
-    "@types/react-redux": "^7.1.23",
+    "@types/react-redux": "^7.1.24",
     "@types/react-share": "^4.0.0",
     "@types/typography": "^0.16.4",
-    "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "@typescript-eslint/parser": "^5.18.0",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
     "autoprefixer": "^10.4.4",
-    "eslint": "^8.12.0",
+    "eslint": "^8.13.0",
     "eslint-plugin-react": "^7.29.4",
     "gh-pages": "^3.2.3",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
-    "tailwindcss": "^3.0.23",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3"
   }
 }
