--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "cross-env GATSBY_CPU_COUNT=8 GATSBY_EXPERIMENTAL_QUERY_CONCURRENCY=16 GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "npm run build && gh-pages -b master -d public",
+    "deploy": "pnpm run build && gh-pages -b master -d public",
     "format": "prettier --write \"**/*.{js,jsx,json,scss,tsx,ts}\"",
     "lint": "eslint --ext .js,.jsx --ignore-pattern public .",
     "update": "npm-check-updates -u"
@@ -34,41 +34,42 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@gatsbyjs/reach-router": "^1.3.9",
     "@types/theme-ui": "^0.6.0",
     "cross-env": "^7.0.3",
     "disqus-react": "^1.1.3",
-    "gatsby": "^4.19.2",
+    "gatsby": "^4.20.0",
     "gatsby-image": "^3.11.0",
-    "gatsby-plugin-feed": "^4.19.0",
-    "gatsby-plugin-google-analytics": "^4.19.0",
-    "gatsby-plugin-manifest": "^4.19.0",
-    "gatsby-plugin-offline": "^5.19.0",
-    "gatsby-plugin-preact": "^6.19.0",
-    "gatsby-plugin-react-helmet": "^5.19.0",
+    "gatsby-plugin-feed": "^4.20.0",
+    "gatsby-plugin-google-analytics": "^4.20.0",
+    "gatsby-plugin-manifest": "^4.20.0",
+    "gatsby-plugin-offline": "^5.20.0",
+    "gatsby-plugin-preact": "^6.20.0",
+    "gatsby-plugin-react-helmet": "^5.20.0",
     "gatsby-plugin-robots-txt": "^1.7.1",
-    "gatsby-plugin-sass": "^5.19.0",
-    "gatsby-plugin-sharp": "^4.19.0",
-    "gatsby-plugin-sitemap": "^5.19.0",
+    "gatsby-plugin-sass": "^5.20.0",
+    "gatsby-plugin-sharp": "^4.20.0",
+    "gatsby-plugin-sitemap": "^5.20.0",
     "gatsby-plugin-theme-ui": "^0.14.7",
-    "gatsby-plugin-typescript": "^4.19.0",
-    "gatsby-plugin-typography": "^4.19.0",
-    "gatsby-remark-autolink-headers": "^5.19.0",
-    "gatsby-remark-copy-linked-files": "^5.19.0",
+    "gatsby-plugin-typescript": "^4.20.0",
+    "gatsby-plugin-typography": "^4.20.0",
+    "gatsby-remark-autolink-headers": "^5.20.0",
+    "gatsby-remark-copy-linked-files": "^5.20.0",
     "gatsby-remark-emojis": "^0.4.3",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^6.19.0",
-    "gatsby-remark-katex": "^6.19.0",
+    "gatsby-remark-images": "^6.20.0",
+    "gatsby-remark-katex": "^6.20.0",
     "gatsby-remark-mathjax": "^1.0.0",
-    "gatsby-remark-prismjs": "^6.19.0",
-    "gatsby-source-filesystem": "^4.19.0",
-    "gatsby-transformer-remark": "^5.19.0",
-    "gatsby-transformer-sharp": "^4.19.0",
+    "gatsby-remark-prismjs": "^6.20.0",
+    "gatsby-source-filesystem": "^4.20.0",
+    "gatsby-transformer-remark": "^5.20.0",
+    "gatsby-transformer-sharp": "^4.20.0",
     "katex": "^0.13.24",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
     "moment": "^2.29.4",
     "node-sass": "^7.0.1",
-    "parse-path": "^6.0.0",
+    "parse-path": "^7.0.0",
     "preact": "^10.10.0",
     "preact-render-to-string": "^5.2.1",
     "prism-themes": "^1.9.0",
@@ -94,10 +95,10 @@
     "@types/react-redux": "^7.1.24",
     "@types/react-share": "^4.0.0",
     "@types/typography": "^0.16.4",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
     "autoprefixer": "^10.4.8",
-    "eslint": "^8.20.0",
+    "eslint": "^8.21.0",
     "eslint-plugin-react": "^7.30.1",
     "gh-pages": "^4.0.0",
     "postcss": "^8.4.14",
