--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@3
+      - uses: actions/checkout@v3
 
       - name: Setup Node
         uses: actions/setup-node@v3
@@ -25,7 +25,7 @@ jobs:
           run_install: false
 
       - name: Cache Gatsby
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: |
             .cache
