--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
           restore-keys: ${{ runner.os }}-pnpm-store-
 
       - name: Install Dependencies
-        run: pnpm install --prefer-offline --no-audit
+        run: pnpm install --prefer-offline
 
       - name: Lint
         run: pnpm run lint
