--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   },
   "scripts": {
     "develop": "gatsby develop",
-    "build": "cross-env GATSBY_CPU_COUNT=8 GATSBY_EXPERIMENTAL_QUERY_CONCURRENCY=16 GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --prefix-paths --log-pages",
+    "build": "gatsby build --prefix-paths --log-pages",
     "serve": "gatsby serve",
-    "clean": "gatsby clean",
+    "clean": "pnpm clean",
     "deploy": "pnpm run build && gh-pages -b master -d public",
     "format": "prettier --write \"**/*.{js,jsx,json,scss,tsx,ts}\"",
     "lint": "eslint --ext .js,.jsx --ignore-pattern public .",
