--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "gatsby-plugin-google-analytics": "^4.20.0",
     "gatsby-plugin-manifest": "^4.20.0",
     "gatsby-plugin-offline": "^5.20.0",
-    "gatsby-plugin-preact": "^6.20.0",
+    "gatsby-plugin-pnpm": "^1.2.10",
     "gatsby-plugin-react-helmet": "^5.20.0",
     "gatsby-plugin-robots-txt": "^1.7.1",
     "gatsby-plugin-sass": "^5.20.0",
@@ -70,8 +70,6 @@
     "moment": "^2.29.4",
     "node-sass": "^7.0.1",
     "parse-path": "^7.0.0",
-    "preact": "^10.10.0",
-    "preact-render-to-string": "^5.2.1",
     "prism-themes": "^1.9.0",
     "prismjs": "^1.28.0",
     "prop-types": "^15.8.1",
@@ -98,7 +96,7 @@
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "autoprefixer": "^10.4.8",
-    "eslint": "^8.21.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.30.1",
     "gh-pages": "^4.0.0",
     "postcss": "^8.4.14",
