--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,10 @@ jobs:
           node-version: '16'
 
       - name: Install pnpm
-        uses: pnpm/action-setup@v2.0.1
+        uses: pnpm/action-setup@v2.2.2
         id: pnpm-install
         with:
-          version: 7
+          version: latest
           run_install: false
 
       - name: Cache Gatsby
