--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@gatsbyjs/reach-router": "^1.3.9",
+    "@mdx-js/react": "^2.1.2",
     "@types/theme-ui": "^0.6.0",
     "cross-env": "^7.0.3",
     "disqus-react": "^1.1.3",
