--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "borderless",
   "private": true,
   "description": "Gatsby Blog, 'Borderless' Theme By Junhobaik",
-  "version": "3.1.0",
+  "version": "4.0.0",
   "author": "JunhoBaik",
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "pnpm"
   ],
   "license": "MIT",
   "repository": {
