build(deps): gatsby-plugin-purgecss

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "gatsby-plugin-theme-ui": "^0.14.7",
     "gatsby-plugin-typescript": "^4.20.0",
     "gatsby-plugin-typography": "^4.20.0",
+    "gatsby-plugin-purgecss": "^6.1.2",
     "gatsby-remark-autolink-headers": "^5.20.0",
     "gatsby-remark-copy-linked-files": "^5.20.0",
     "gatsby-remark-emojis": "^0.4.3",
