--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "gatsby-plugin-typescript": "^4.20.0",
     "gatsby-plugin-typography": "^4.20.0",
     "gatsby-plugin-purgecss": "^6.1.2",
+    "gatsby-plugin-remove-fingerprints": "^0.0.2",
     "gatsby-remark-autolink-headers": "^5.20.0",
     "gatsby-remark-copy-linked-files": "^5.20.0",
     "gatsby-remark-emojis": "^0.4.3",
@@ -89,6 +90,7 @@
     "terser": "^5.14.2",
     "theme-ui": "^0.14.7",
     "typography": "^0.16.21"
+    
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
