--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
   "engines": {
     "node": "^16.0.0"
   },
-  "browserslist": [">0.25%", "not dead and supports es6-module"],
+  "browserslist": [
+    ">0.25%",
+    "not dead and supports es6-module"
+  ],
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
@@ -38,7 +41,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@gatsbyjs/reach-router": "^1.3.9",
-    "@mdx-js/react": "^1.6.22",
     "@types/theme-ui": "^0.6.0",
     "cross-env": "^7.0.3",
     "disqus-react": "^1.1.3",
@@ -50,6 +52,7 @@
     "gatsby-plugin-offline": "^5.20.0",
     "gatsby-plugin-pnpm": "^1.2.10",
     "gatsby-plugin-react-helmet": "^5.20.0",
+    "gatsby-plugin-remove-fingerprints": "^0.0.2",
     "gatsby-plugin-robots-txt": "^1.7.1",
     "gatsby-plugin-sass": "^5.20.0",
     "gatsby-plugin-sharp": "^4.20.0",
@@ -57,20 +60,17 @@
     "gatsby-plugin-theme-ui": "^0.14.7",
     "gatsby-plugin-typescript": "^4.20.0",
     "gatsby-plugin-typography": "^4.20.0",
-    "gatsby-plugin-purgecss": "^6.1.2",
-    "gatsby-plugin-remove-fingerprints": "^0.0.2",
     "gatsby-remark-autolink-headers": "^5.20.0",
     "gatsby-remark-copy-linked-files": "^5.20.0",
     "gatsby-remark-emojis": "^0.4.3",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^6.20.0",
     "gatsby-remark-katex": "^6.20.0",
-    "gatsby-remark-mathjax": "^1.0.0",
     "gatsby-remark-prismjs": "^6.20.0",
     "gatsby-source-filesystem": "^4.20.0",
     "gatsby-transformer-remark": "^5.20.0",
     "gatsby-transformer-sharp": "^4.20.0",
-    "katex": "^0.13.3",
+    "katex": "^0.13.24",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
     "moment": "^2.29.4",
@@ -90,7 +90,6 @@
     "terser": "^5.14.2",
     "theme-ui": "^0.14.7",
     "typography": "^0.16.21"
-    
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
