--- a/package.json
+++ b/package.json
@@ -41,14 +41,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@gatsbyjs/reach-router": "^1.3.9",
-    "@types/theme-ui": "^0.6.0",
     "@mdx-js/react": "^1.6.22",
     "cross-env": "^7.0.3",
     "disqus-react": "^1.1.3",
     "gatsby": "^4.20.0",
-    "gatsby-image": "^3.11.0",
     "gatsby-plugin-feed": "^4.20.0",
     "gatsby-plugin-google-analytics": "^4.20.0",
+    "gatsby-plugin-image": "^2.20.0",
     "gatsby-plugin-manifest": "^4.20.0",
     "gatsby-plugin-offline": "^5.20.0",
     "gatsby-plugin-pnpm": "^1.2.10",
@@ -71,7 +70,8 @@
     "gatsby-source-filesystem": "^4.20.0",
     "gatsby-transformer-remark": "^5.20.0",
     "gatsby-transformer-sharp": "^4.20.0",
-    "katex": "^0.13.24",
+    "joi": "^17.6.0",
+    "katex": "0.13.24",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
     "moment": "^2.29.4",
@@ -80,14 +80,15 @@
     "prism-themes": "^1.9.0",
     "prismjs": "^1.28.0",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
+    "react": "17.0.2",
     "react-adsense": "^0.1.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.2",
     "react-share": "^4.4.0",
     "react-typography": "^0.16.20",
     "redux": "^4.2.0",
+    "svgo": "^2.8.0",
     "terser": "^5.14.2",
     "theme-ui": "^0.14.7",
     "typography": "^0.16.21"
@@ -98,17 +99,32 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-helmet": "^6.1.5",
     "@types/react-redux": "^7.1.24",
-    "@types/react-share": "^4.0.0",
     "@types/typography": "^0.16.4",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "autoprefixer": "^10.4.8",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "gh-pages": "^4.0.0",
     "postcss": "^8.4.16",
-    "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4"
+  },
+  "pnpm": {
+    "overrides": {
+      "node-fetch@<2.6.7": ">=2.6.7",
+      "sanitize-html@<2.3.1": ">=2.3.1",
+      "cross-fetch@>=3.0.0 <3.1.5": ">=3.1.5",
+      "nth-check@<2.0.1": ">=2.0.1",
+      "ws@>=7.0.0 <7.4.6": ">=7.4.6",
+      "jpeg-js@<0.4.4": ">=0.4.4",
+      "got@<11.8.5": ">=11.8.5",
+      "parse-path@<5.0.0": ">=5.0.0",
+      "ansi-html@<0.0.8": ">=0.0.8",
+      "sanitize-html@<2.3.2": ">=2.3.2"
+    }
   }
 }
