--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@gatsbyjs/reach-router": "^1.3.9",
     "@mdx-js/react": "^1.6.22",
+    "core-js": "^3.24.1",
     "cross-env": "^7.0.3",
     "disqus-react": "^1.1.3",
     "gatsby": "^4.20.0",
@@ -110,6 +111,7 @@
     "eslint-plugin-react": "^7.30.1",
     "gh-pages": "^4.0.0",
     "postcss": "^8.4.16",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4"
   },
