--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,8 @@
     // "strictPropertyInitialization": true,
     // "noImplicitThis": true,
     // "alwaysStrict": true,
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     // "noImplicitReturns": true,
     // "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
