--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,17 +10,17 @@
     // "sourceMap": true,
     "outDir": "./public",
     "strict": true,
-    // "noImplicitAny": true,
-    // "strictNullChecks": true,
-    // "strictFunctionTypes": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
     // "strictBindCallApply": true,
     // "strictPropertyInitialization": true,
-    // "noImplicitThis": true,
+    "noImplicitThis": true,
     // "alwaysStrict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    // "noImplicitReturns": true,
-    // "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
