--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@gatsbyjs/reach-router": "^1.3.9",
     "@mdx-js/react": "^1.6.22",
-    "core-js": "^3.24.1",
     "cross-env": "^7.0.3",
     "disqus-react": "^1.1.3",
     "gatsby": "^4.20.0",
@@ -89,7 +88,6 @@
     "react-share": "^4.4.0",
     "react-typography": "^0.16.20",
     "redux": "^4.2.0",
-    "svgo": "^2.8.0",
     "terser": "^5.14.2",
     "theme-ui": "^0.14.7",
     "typography": "^0.16.21"
@@ -117,6 +115,7 @@
   },
   "pnpm": {
     "overrides": {
+      "core-js@2.6.12": ">=3.24.1",
       "node-fetch@<2.6.7": ">=2.6.7",
       "sanitize-html@<2.3.1": ">=2.3.1",
       "cross-fetch@>=3.0.0 <3.1.5": ">=3.1.5",
@@ -126,7 +125,9 @@
       "got@<11.8.5": ">=11.8.5",
       "parse-path@<5.0.0": ">=5.0.0",
       "ansi-html@<0.0.8": ">=0.0.8",
-      "sanitize-html@<2.3.2": ">=2.3.2"
+      "sanitize-html@<2.3.2": ">=2.3.2",
+      "multer@1.4.4": ">=1.4.4-lts",
+      "svgo@1.3.2": ">=2.8.0"
     }
   }
 }
