--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
           restore-keys: ${{ runner.os }}-pnpm-store-
 
       - name: Install Dependencies
-        run: pnpm install --production
+        run: pnpm install --production --prefer-offline
 
       - name: Build
         run: pnpm run build
