--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "node": "^16.0.0"
   },
   "browserslist": [
-    ">0.25%",
-    "not dead and supports es6-module"
+    ">0.25%, not dead and supports es6-module"
   ],
   "dependencies": {
     "@emotion/react": "^11.10.0",
@@ -41,35 +40,35 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@gatsbyjs/reach-router": "^1.3.9",
-    "@mdx-js/react": "^1.6.22",
+    "@mdx-js/react": "1.6.22",
     "cross-env": "^7.0.3",
     "disqus-react": "^1.1.3",
-    "gatsby": "^4.20.0",
-    "gatsby-plugin-feed": "^4.20.0",
-    "gatsby-plugin-google-analytics": "^4.20.0",
-    "gatsby-plugin-image": "^2.20.0",
-    "gatsby-plugin-manifest": "^4.20.0",
-    "gatsby-plugin-offline": "^5.20.0",
+    "gatsby": "^4.21.1",
+    "gatsby-plugin-feed": "^4.21.0",
+    "gatsby-plugin-google-analytics": "^4.21.0",
+    "gatsby-plugin-image": "^2.21.0",
+    "gatsby-plugin-manifest": "^4.21.0",
+    "gatsby-plugin-offline": "^5.21.0",
     "gatsby-plugin-pnpm": "^1.2.10",
-    "gatsby-plugin-react-helmet": "^5.20.0",
+    "gatsby-plugin-react-helmet": "^5.21.0",
     "gatsby-plugin-remove-fingerprints": "^0.0.2",
     "gatsby-plugin-robots-txt": "^1.7.1",
-    "gatsby-plugin-sass": "^5.20.0",
-    "gatsby-plugin-sharp": "^4.20.0",
-    "gatsby-plugin-sitemap": "^5.20.0",
+    "gatsby-plugin-sass": "^5.21.0",
+    "gatsby-plugin-sharp": "^4.21.0",
+    "gatsby-plugin-sitemap": "^5.21.0",
     "gatsby-plugin-theme-ui": "^0.14.7",
-    "gatsby-plugin-typescript": "^4.20.0",
-    "gatsby-plugin-typography": "^4.20.0",
-    "gatsby-remark-autolink-headers": "^5.20.0",
-    "gatsby-remark-copy-linked-files": "^5.20.0",
+    "gatsby-plugin-typescript": "^4.21.0",
+    "gatsby-plugin-typography": "^4.21.0",
+    "gatsby-remark-autolink-headers": "^5.21.0",
+    "gatsby-remark-copy-linked-files": "^5.21.0",
     "gatsby-remark-emojis": "^0.4.3",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^6.20.0",
-    "gatsby-remark-katex": "^6.20.0",
-    "gatsby-remark-prismjs": "^6.20.0",
-    "gatsby-source-filesystem": "^4.20.0",
-    "gatsby-transformer-remark": "^5.20.0",
-    "gatsby-transformer-sharp": "^4.20.0",
+    "gatsby-remark-images": "^6.21.0",
+    "gatsby-remark-katex": "^6.21.0",
+    "gatsby-remark-prismjs": "^6.21.0",
+    "gatsby-source-filesystem": "^4.21.1",
+    "gatsby-transformer-remark": "^5.21.0",
+    "gatsby-transformer-sharp": "^4.21.0",
     "joi": "^17.6.0",
     "katex": "0.13.24",
     "lodash": "^4.17.21",
@@ -93,14 +92,14 @@
     "typography": "^0.16.21"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.182",
+    "@types/lodash": "^4.14.184",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-helmet": "^6.1.5",
     "@types/react-redux": "^7.1.24",
     "@types/typography": "^0.16.4",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
     "autoprefixer": "^10.4.8",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
