--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "gatsby-source-filesystem": "^4.24.0",
     "gatsby-transformer-remark": "^5.24.0",
     "gatsby-transformer-sharp": "^4.24.0",
-    "katex": "~0.16.2",
+    "katex": "0.13.24",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
     "moment": "^2.29.4",
@@ -79,9 +79,9 @@
     "prism-themes": "^1.9.0",
     "prismjs": "^1.29.0",
     "prop-types": "^15.8.1",
-    "react": "~18.2.0",
+    "react": "17.0.2",
     "react-adsense": "^0.1.0",
-    "react-dom": "~18.2.0",
+    "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.4",
     "react-share": "^4.4.0",
@@ -101,7 +101,7 @@
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "autoprefixer": "^10.4.12",
-    "eslint": "~8.25.0",
+    "eslint": "7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
