--- a/package.json
+++ b/package.json
@@ -41,36 +41,36 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@gatsbyjs/reach-router": "^1.3.9",
-    "@mdx-js/react": "2.1.4",
+    "@mdx-js/react": "1.6.22",
     "cross-env": "^7.0.3",
-    "disqus-react": "^1.1.4",
-    "gatsby": "^4.24.4",
-    "gatsby-plugin-feed": "^4.24.0",
-    "gatsby-plugin-google-analytics": "^4.24.0",
-    "gatsby-plugin-image": "^2.24.0",
-    "gatsby-plugin-manifest": "^4.24.0",
-    "gatsby-plugin-offline": "^5.24.0",
+    "disqus-react": "^1.1.3",
+    "gatsby": "^4.23.1",
+    "gatsby-plugin-feed": "^4.23.1",
+    "gatsby-plugin-google-analytics": "^4.23.0",
+    "gatsby-plugin-image": "^2.23.1",
+    "gatsby-plugin-manifest": "^4.23.1",
+    "gatsby-plugin-offline": "^5.23.1",
     "gatsby-plugin-pnpm": "^1.2.10",
-    "gatsby-plugin-react-helmet": "^5.24.0",
+    "gatsby-plugin-react-helmet": "^5.23.0",
     "gatsby-plugin-remove-fingerprints": "^0.0.2",
     "gatsby-plugin-robots-txt": "^1.7.1",
-    "gatsby-plugin-sass": "^5.24.0",
-    "gatsby-plugin-sharp": "^4.24.0",
-    "gatsby-plugin-sitemap": "^5.24.0",
-    "gatsby-plugin-theme-ui": "^0.15.1",
-    "gatsby-plugin-typescript": "^4.24.0",
-    "gatsby-plugin-typography": "^4.24.0",
-    "gatsby-remark-autolink-headers": "^5.24.0",
-    "gatsby-remark-copy-linked-files": "^5.24.0",
+    "gatsby-plugin-sass": "^5.23.1",
+    "gatsby-plugin-sharp": "^4.23.1",
+    "gatsby-plugin-sitemap": "^5.23.1",
+    "gatsby-plugin-theme-ui": "^0.14.7",
+    "gatsby-plugin-typescript": "^4.23.0",
+    "gatsby-plugin-typography": "^4.23.0",
+    "gatsby-remark-autolink-headers": "^5.23.1",
+    "gatsby-remark-copy-linked-files": "^5.23.0",
     "gatsby-remark-emojis": "^0.4.3",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^6.24.0",
-    "gatsby-remark-katex": "^6.24.0",
-    "gatsby-remark-prismjs": "^6.24.0",
-    "gatsby-source-filesystem": "^4.24.0",
-    "gatsby-transformer-remark": "^5.24.0",
-    "gatsby-transformer-sharp": "^4.24.0",
-    "katex": "0.13.24",
+    "gatsby-remark-images": "^6.23.1",
+    "gatsby-remark-katex": "^6.23.0",
+    "gatsby-remark-prismjs": "^6.23.0",
+    "gatsby-source-filesystem": "^4.23.0",
+    "gatsby-transformer-remark": "^5.23.1",
+    "gatsby-transformer-sharp": "^4.23.1",
+    "katex": "~0.13.24",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
     "moment": "^2.29.4",
@@ -79,38 +79,38 @@
     "prism-themes": "^1.9.0",
     "prismjs": "^1.29.0",
     "prop-types": "^15.8.1",
-    "react": "17.0.2",
+    "react": "~17.0.2",
     "react-adsense": "^0.1.0",
-    "react-dom": "17.0.2",
+    "react-dom": "~17.0.2",
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.4",
     "react-share": "^4.4.0",
     "react-typography": "^0.16.20",
     "redux": "^4.2.0",
-    "terser": "^5.15.1",
-    "theme-ui": "^0.15.1",
+    "terser": "^5.15.0",
+    "theme-ui": "^0.14.7",
     "typography": "^0.16.21"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.186",
+    "@types/lodash": "^4.14.185",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/react-helmet": "^6.1.5",
     "@types/react-redux": "^7.1.24",
     "@types/typography": "^0.16.4",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
     "autoprefixer": "^10.4.12",
-    "eslint": "7.32.0",
+    "eslint": "~7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react": "^7.31.8",
     "gh-pages": "^4.0.0",
-    "postcss": "^8.4.17",
+    "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.3"
   },
   "pnpm": {
     "overrides": {
