--- a/package.json
+++ b/package.json
@@ -41,10 +41,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@gatsbyjs/reach-router": "^1.3.9",
-    "@mdx-js/react": "2.1.5",
+    "@mdx-js/react": "1.6.22",
     "cross-env": "^7.0.3",
     "disqus-react": "^1.1.5",
     "gatsby": "^5.0.1",
+    "gatsby-core-utils": "^4.0.0",
     "gatsby-plugin-feed": "^5.0.0",
     "gatsby-plugin-google-analytics": "^5.0.0",
     "gatsby-plugin-image": "^3.0.0",
@@ -70,25 +71,25 @@
     "gatsby-source-filesystem": "^5.0.0",
     "gatsby-transformer-remark": "^6.0.0",
     "gatsby-transformer-sharp": "^5.0.0",
-    "katex": "~0.16.3",
+    "katex": "~0.13.24",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
     "moment": "^2.29.4",
-    "node-sass": "^8.0.0",
+    "node-sass": "^7.0.3",
     "parse-path": "^7.0.0",
     "prism-themes": "^1.9.0",
     "prismjs": "^1.29.0",
     "prop-types": "^15.8.1",
-    "react": "~18.2.0",
+    "react": "17.0.2",
     "react-adsense": "^0.1.0",
-    "react-dom": "~18.2.0",
+    "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.5",
     "react-share": "^4.4.1",
     "react-typography": "^0.16.20",
     "redux": "^4.2.0",
     "terser": "^5.15.1",
-    "theme-ui": "^0.15.4",
+    "theme-ui": "^0.14.7",
     "typography": "^0.16.21"
   },
   "devDependencies": {
@@ -101,7 +102,7 @@
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "autoprefixer": "^10.4.13",
-    "eslint": "~8.27.0",
+    "eslint": "~7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -111,22 +112,5 @@
     "prettier": "^2.7.1",
     "tailwindcss": "^3.2.3",
     "typescript": "^4.8.4"
-  },
-  "pnpm": {
-    "overrides": {
-      "core-js@2.6.12": ">=3.24.1",
-      "node-fetch@<2.6.7": ">=2.6.7",
-      "sanitize-html@<2.3.1": ">=2.3.1",
-      "cross-fetch@>=3.0.0 <3.1.5": ">=3.1.5",
-      "nth-check@<2.0.1": ">=2.0.1",
-      "ws@>=7.0.0 <7.4.6": ">=7.4.6",
-      "jpeg-js@<0.4.4": ">=0.4.4",
-      "got@<11.8.5": ">=11.8.5",
-      "parse-path@<5.0.0": ">=5.0.0",
-      "ansi-html@<0.0.8": ">=0.0.8",
-      "sanitize-html@<2.3.2": ">=2.3.2",
-      "multer@1.4.4": ">=1.4.4-lts",
-      "svgo@1.3.2": ">=2.8.0"
-    }
   }
 }
