build(cd): canme & remove unused files

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,6 +57,8 @@ jobs:
           github_token: ${{ secrets.GH_TOKEN }}
           publish_branch: master
           publish_dir: ./public
+          cname: kozistr.tech
+          keep_files: false
           user_name: 'kozistr'
           user_email: 'kozistr@gmail.com'
           full_commit_message: ${{ github.event.head_commit.message }}
