--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "display": "Node 16",
+  "display": "Node 18",
   "compilerOptions": {
     "target": "es2021",
     "module": "commonjs",
-    "lib": ["es2021"],
+    "lib": ["es2021", "DOM"],
     "allowJs": true,
     "jsx": "react",
-    // "sourceMap": true,
     "outDir": "./public",
     "strict": true,
     "noImplicitAny": true,
@@ -24,7 +23,9 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "declaration": true
   },
-  "exclude": ["./*.js"]
+  "exclude": ["./*.js", "node_modules"]
 }
