build(deps): packages

--- a/package.json
+++ b/package.json
@@ -45,32 +45,32 @@
     "@giscus/react": "^2.2.8",
     "@mdx-js/react": "2.3.0",
     "cross-env": "^7.0.3",
-    "gatsby": "^5.8.1",
-    "gatsby-plugin-feed": "^5.8.0",
-    "gatsby-plugin-google-gtag": "^5.8.0",
-    "gatsby-plugin-image": "^3.8.0",
-    "gatsby-plugin-manifest": "^5.8.0",
-    "gatsby-plugin-offline": "^6.8.0",
+    "gatsby": "^5.9.0",
+    "gatsby-plugin-feed": "^5.9.0",
+    "gatsby-plugin-google-gtag": "^5.9.0",
+    "gatsby-plugin-image": "^3.9.0",
+    "gatsby-plugin-manifest": "^5.9.0",
+    "gatsby-plugin-offline": "^6.9.0",
     "gatsby-plugin-pnpm": "^1.2.10",
-    "gatsby-plugin-react-helmet": "^6.8.0",
+    "gatsby-plugin-react-helmet": "^6.9.0",
     "gatsby-plugin-remove-fingerprints": "^0.0.2",
     "gatsby-plugin-robots-txt": "^1.8.0",
-    "gatsby-plugin-sass": "^6.8.0",
-    "gatsby-plugin-sharp": "^5.8.1",
-    "gatsby-plugin-sitemap": "^6.8.0",
+    "gatsby-plugin-sass": "^6.9.0",
+    "gatsby-plugin-sharp": "^5.9.0",
+    "gatsby-plugin-sitemap": "^6.9.0",
     "gatsby-plugin-theme-ui": "^0.15.7",
-    "gatsby-plugin-typescript": "^5.8.0",
-    "gatsby-plugin-typography": "^5.8.0",
-    "gatsby-remark-autolink-headers": "^6.8.0",
-    "gatsby-remark-copy-linked-files": "^6.8.0",
+    "gatsby-plugin-typescript": "^5.9.0",
+    "gatsby-plugin-typography": "^5.9.0",
+    "gatsby-remark-autolink-headers": "^6.9.0",
+    "gatsby-remark-copy-linked-files": "^6.9.0",
     "gatsby-remark-emojis": "^0.4.3",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^7.8.0",
-    "gatsby-remark-katex": "^7.8.0",
-    "gatsby-remark-prismjs": "^7.8.0",
-    "gatsby-source-filesystem": "^5.8.0",
-    "gatsby-transformer-remark": "^6.8.0",
-    "gatsby-transformer-sharp": "^5.8.0",
+    "gatsby-remark-images": "^7.9.0",
+    "gatsby-remark-katex": "^7.9.0",
+    "gatsby-remark-prismjs": "^7.9.0",
+    "gatsby-source-filesystem": "^5.9.0",
+    "gatsby-transformer-remark": "^6.9.0",
+    "gatsby-transformer-sharp": "^5.9.0",
     "katex": "0.13.24",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
@@ -88,29 +88,29 @@
     "react-share": "^4.4.1",
     "react-typography": "^0.16.23",
     "redux": "^4.2.1",
-    "terser": "^5.16.9",
+    "terser": "^5.17.1",
     "theme-ui": "^0.15.7",
     "typography": "^0.16.21"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.192",
-    "@types/react": "^18.0.34",
-    "@types/react-dom": "^18.0.11",
+    "@types/lodash": "^4.14.194",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
     "@types/react-helmet": "^6.1.6",
     "@types/react-redux": "^7.1.25",
     "@types/typography": "^0.16.4",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.38.0",
+    "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "gh-pages": "^5.0.0",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.7",
-    "tailwindcss": "^3.3.1",
+    "postcss": "^8.4.23",
+    "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4"
   },
   "pnpm": {
@@ -122,7 +122,8 @@
       "ua-parser-js@<0.7.33": ">=0.7.33",
       "http-cache-semantics@<4.1.1": ">=4.1.1",
       "@sideway/formula@<3.0.1": ">=3.0.1",
-      "webpack@>=5.0.0 <5.76.0": ">=5.76.0"
+      "webpack@>=5.0.0 <5.76.0": ">=5.76.0",
+      "yaml@>=2.0.0-5 <2.2.2": ">=2.2.2"
     }
   }
 }
