build(deps): fix audit

--- a/package.json
+++ b/package.json
@@ -130,7 +130,9 @@
       "semver@>=7.0.0 <7.5.2": ">=7.5.2",
       "word-wrap@<1.2.4": ">=1.2.4",
       "graphql@>=16.3.0 <16.8.1": ">=16.8.1",
-      "postcss@<8.4.31": ">=8.4.31"
+      "postcss@<8.4.31": ">=8.4.31",
+      "@babel/traverse@<7.23.2": ">=7.23.2",
+      "axios@>=0.8.1 <1.6.0": ">=1.6.0"
     }
   }
 }
