build(deps): packages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "borderless",
   "private": true,
   "description": "Gatsby Blog, 'Borderless' Theme By Junhobaik",
-  "version": "5.12.0",
+  "version": "5.13.4",
   "author": "kozistr",
   "keywords": [
     "gatsby",
@@ -35,83 +35,83 @@
     ">0.25%, not dead and supports es6-module"
   ],
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-brands-svg-icons": "^6.5.1",
-    "@fortawesome/free-regular-svg-icons": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@emotion/react": "^11.11.4",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@gatsbyjs/reach-router": "^2.0.1",
-    "@giscus/react": "^2.4.0",
-    "@mdx-js/react": "3.0.0",
+    "@giscus/react": "^3.0.0",
+    "@mdx-js/react": "3.0.1",
     "cross-env": "^7.0.3",
-    "gatsby": "^5.13.1",
-    "gatsby-plugin-feed": "^5.13.0",
-    "gatsby-plugin-google-gtag": "^5.13.0",
-    "gatsby-plugin-image": "^3.13.0",
-    "gatsby-plugin-manifest": "^5.13.0",
-    "gatsby-plugin-offline": "^6.13.0",
+    "gatsby": "^5.13.4",
+    "gatsby-plugin-feed": "^5.13.1",
+    "gatsby-plugin-google-gtag": "^5.13.1",
+    "gatsby-plugin-image": "^3.13.1",
+    "gatsby-plugin-manifest": "^5.13.1",
+    "gatsby-plugin-offline": "^6.13.2",
     "gatsby-plugin-pnpm": "^1.2.10",
-    "gatsby-plugin-react-helmet": "^6.13.0",
+    "gatsby-plugin-react-helmet": "^6.13.1",
     "gatsby-plugin-remove-fingerprints": "^0.0.2",
     "gatsby-plugin-robots-txt": "^1.8.0",
-    "gatsby-plugin-sass": "^6.13.0",
-    "gatsby-plugin-sharp": "^5.13.0",
-    "gatsby-plugin-sitemap": "^6.13.0",
-    "gatsby-plugin-theme-ui": "^0.16.1",
-    "gatsby-plugin-typescript": "^5.13.0",
-    "gatsby-plugin-typography": "^5.13.0",
-    "gatsby-remark-autolink-headers": "^6.13.0",
-    "gatsby-remark-copy-linked-files": "^6.13.0",
+    "gatsby-plugin-sass": "^6.13.1",
+    "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-plugin-sitemap": "^6.13.1",
+    "gatsby-plugin-theme-ui": "^0.16.2",
+    "gatsby-plugin-typescript": "^5.13.1",
+    "gatsby-plugin-typography": "^5.13.1",
+    "gatsby-remark-autolink-headers": "^6.13.1",
+    "gatsby-remark-copy-linked-files": "^6.13.1",
     "gatsby-remark-emojis": "^0.4.3",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^7.13.0",
-    "gatsby-remark-katex": "^7.13.0",
-    "gatsby-remark-prismjs": "^7.13.0",
-    "gatsby-source-filesystem": "^5.13.0",
-    "gatsby-transformer-remark": "^6.13.0",
-    "gatsby-transformer-sharp": "^5.13.0",
-    "katex": "0.16.9",
+    "gatsby-remark-images": "^7.13.1",
+    "gatsby-remark-katex": "^7.13.1",
+    "gatsby-remark-prismjs": "^7.13.1",
+    "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-remark": "^6.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
+    "katex": "0.16.10",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
-    "moment": "^2.30.0",
+    "moment": "^2.30.1",
     "node-sass": "^9.0.0",
     "parse-path": "^7.0.0",
     "prism-themes": "^1.9.0",
     "prismjs": "^1.29.0",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-adsense": "^0.1.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
-    "react-redux": "^9.0.4",
-    "react-share": "^5.0.3",
+    "react-redux": "^9.1.1",
+    "react-share": "^5.1.0",
     "react-typography": "^0.16.23",
     "redux": "^5.0.1",
-    "terser": "^5.26.0",
-    "theme-ui": "^0.16.1",
+    "terser": "^5.30.4",
+    "theme-ui": "^0.16.2",
     "typography": "^0.16.24"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.202",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
+    "@types/lodash": "^4.17.0",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "@types/react-helmet": "^6.1.11",
     "@types/react-redux": "^7.1.33",
     "@types/typography": "^0.16.7",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^9.1.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.2",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
     "gh-pages": "^6.1.1",
-    "postcss": "^8.4.32",
-    "prettier": "^3.1.1",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.3"
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   },
   "pnpm": {
     "overrides": {
@@ -132,7 +132,18 @@
       "graphql@>=16.3.0 <16.8.1": ">=16.8.1",
       "postcss@<8.4.31": ">=8.4.31",
       "@babel/traverse@<7.23.2": ">=7.23.2",
-      "axios@>=0.8.1 <1.6.0": ">=1.6.0"
+      "axios@>=0.8.1 <1.6.0": ">=1.6.0",
+      "msgpackr@<1.10.1": ">=1.10.1",
+      "follow-redirects@<1.15.4": ">=1.15.4",
+      "ip@=2.0.0": ">=2.0.1",
+      "es5-ext@>=0.10.0 <0.10.63": ">=0.10.63",
+      "sanitize-html@<2.12.1": ">=2.12.1",
+      "webpack-dev-middleware@<=5.3.3": ">=5.3.4",
+      "katex@>=0.11.0 <0.16.10": ">=0.16.10",
+      "katex@>=0.10.0-beta <0.16.10": ">=0.16.10",
+      "express@<4.19.2": ">=4.19.2",
+      "follow-redirects@<=1.15.5": ">=1.15.6",
+      "tar@<6.2.1": ">=6.2.1"
     }
   }
 }
