build(deps): redux toolkit

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@gatsbyjs/reach-router": "^2.0.1",
     "@giscus/react": "^3.0.0",
-    "@mdx-js/react": "3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@reduxjs/toolkit": "^2.2.5",
     "cross-env": "^7.0.3",
     "gatsby": "^5.13.5",
     "gatsby-plugin-feed": "^5.13.1",
